src/test/ui/issues/issue-3099-a.rs
enum a { b, c }

enum a { d, e } //~ ERROR the name `a` is defined multiple times

fn main() {}
